--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
-dotenv = "0.15.0"
+dirs = "5.0.1"
 reqwest = { version = "0.12.4" ,  features=["json"]}
 serde = {version = "1.0.198" , features=["derive"]}
+serde_json = "=1.0.1"
 tokio = { version = "1.37.0" , features =["full"]}
 
 [lib]
