--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ dirs = "5.0.1"
 reqwest = { version = "0.12.4" ,  features=["json"]}
 serde = {version = "1.0.198" , features=["derive"]}
 serde_json = "=1.0.1"
+textwrap = "0.16.1"
 tokio = { version = "1.37.0" , features =["full"]}
 
 [lib]
