--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
 dirs = "5.0.1"
+logger-rust = "0.2.12"
 reqwest = { version = "0.12.4" ,  features=["json"]}
 serde = {version = "1.0.198" , features=["derive"]}
 serde_json = "=1.0.1"
