--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 clap = { version = "4.5.4", features = ["derive"] }
 dirs = "5.0.1"
 logger-rust = "0.2.12"
-reqwest = { version = "0.12.4" ,  features=["json"]}
+reqwest = { version = "0.12.4" ,  features=["json" , "multipart"]}
 serde = {version = "1.0.198" , features=["derive"]}
 serde_json = "=1.0.1"
 textwrap = "0.16.1"
